--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -52,9 +52,30 @@
 
 :local(.navbar){
     background-color: #34404f;
-    height: 1rem;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    overflow: hidden;
+    padding-left: 1rem;
+    & a{
+        float: left;
+        display: block;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 0.9rem 1rem;
+        text-decoration: none;
+        font-size: 1.1rem;
+        &:hover{
+            background-color: #ddd;
+            color: black;
+        }
+    }
+    & .active{
+        background-color: #4c93af;
+        color: white;
+    }
+    & .icon{
+        display: none;
+    }
 }
 
 :local(.headerButton){
@@ -70,6 +91,32 @@
     }
 }
 
+@media only screen and (max-width: 600px){
+    :local(.navbar){
+        & a{
+            &:not(:first-child){
+                display: none;
+            }
+            &.icon{
+                float: right;
+                display: block;
+            }
+        }
+        &.responsive{
+            position: relative;
+            & a{
+                &.icon{
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                }
+                float: none;
+                display: block;
+                text-align: left;
+            }
+        }
+    }
+}
 
 @media only screen and (min-width: 1280px){
     :local(.headerContainer){
