--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -3,6 +3,7 @@
     height: 70vh;
     margin-left: 1rem;
     margin-right: 1rem;
+    color: black;
 }
 
 @media only screen and (min-width: 1280px){
