--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -4,11 +4,12 @@
     margin-left: 1rem;
     margin-right: 1rem;
     color: black;
+    padding: 2rem;
 }
 
-@media only screen and (min-width: 1280px){
+@media only screen and (min-width: 1300px){
     :local(.bodyContainer){
-        width: 1280px;
+        max-width: 1280px;
         margin: auto;
     }
 }
