--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -7,6 +7,10 @@
     padding: 2rem;
 }
 
+:local(.signInContainer){
+    padding-top: 10rem;
+}
+
 @media only screen and (min-width: 1300px){
     :local(.bodyContainer){
         max-width: 1280px;
