--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -99,7 +99,12 @@
     }
 }
 
-@media only screen and (max-width: 600px){
+:local(.welcomeMessage){
+    padding: 0.9rem 1rem;
+    float: right;
+}
+
+@media only screen and (max-width: 700px){
     :local(.navbar){
         & a{
             &:not(:first-child){
@@ -133,6 +138,9 @@
     }
     :local(.topbar){
         display: inline;
+    }
+    :local(.welcomeMessage){
+        display: none;
     }
 }
 
