--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -4,6 +4,16 @@
     margin-right: 1rem;
     color: black;
     padding: 2rem;
+    display: grid;
+    grid-template-areas: "left right right";
+}
+
+:local(.bodyLeft){
+    grid-area: left;
+}
+
+:local(.bodyRight){
+    grid-area: right;
 }
 
 :local(.signInContainer){
@@ -40,6 +50,13 @@
     cursor: pointer;
     &:hover{
         background-color: rgb(118, 196, 226);
+    }
+}
+
+@media only screen and (max-width: 1020px){
+    :local(.bodyContainer){
+        grid-template-areas: "left"
+                            "right";
     }
 }
 
