--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -53,6 +53,11 @@
     }
 }
 
+:local(.uploadProgress){
+    background-color: #4C93AF;
+    height: 3rem;
+}
+
 @media only screen and (max-width: 1020px){
     :local(.bodyContainer){
         grid-template-areas: "left"
