--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -1,4 +1,5 @@
 :local(.bodyContainer){
+    min-height: 70vh;
     margin-left: 1rem;
     margin-right: 1rem;
     color: black;
@@ -17,6 +18,7 @@
 
 :local(.signInContainer){
     padding-top: 10rem;
+    min-height: 70vh;
 }
 
 :local(.uploadName){
