--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -21,6 +21,45 @@
     min-height: 70vh;
 }
 
+:local(.userContainer){
+    display: grid;
+    grid-template-areas: "header header header header"
+                        "logo info info info";
+}
+
+:local(.userHeader){
+    grid-area: header;
+}
+
+:local(.avatarContainer){
+    grid-area: logo;
+    max-width: 7.5rem;
+    padding-right: 1rem;
+}
+
+:local(.userInfoContainer){
+    grid-area: info;
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+}
+
+:local(.userInfoContainerColumn){
+    flex: 10;
+    display: flex;
+    flex-direction: column;
+}
+
+:local(.userInfoContainerColumnThin){
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+:local(.userInfoContainerCell){
+    flex: 1;
+}
+
 :local(.uploadName){
     padding: 0.5rem;
     width: 100%;
@@ -70,5 +109,28 @@
     :local(.bodyContainer){
         max-width: 1280px;
         margin: auto;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    :local(.userContainer){
+        grid-template-areas: "header"
+                            "logo"
+                            "info";
+    }
+    :local(.avatarContainer){
+        min-width: 20vw;
+        margin: auto;
+        padding: 3rem;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    :local(.reactTable){
+        max-width: 90vw;
+        overflow: scroll;
+    }
+    :local(.bodyContainer){
+        padding: 0rem;
     }
 }
