Added a description field and shows it on the upload viewer

--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -81,6 +81,14 @@
     margin-bottom: 0.5rem;
 }
 
+:local(.uploadDescription){
+    padding: 0.5rem;
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+    height: 4rem;
+}
+
 :local(.uploadButton){
     padding: 1rem;
     background-color: #4C93AF;
