--- a/src/components/navigation/UploadViewer.scss
+++ b/src/components/navigation/UploadViewer.scss
@@ -8,6 +8,31 @@
     grid-template-areas: "left right right";
 }
 
+:local(.uploadContainer){
+    display: grid;
+    grid-template-areas: "upload upload info";
+}
+
+:local(.uploadLeft){
+    grid-area: upload;
+}
+
+:local(.uploadRight){
+    grid-area: info;
+}
+
+:local(.downloadButton){
+    padding: 1rem;
+    background-color: #4C93AF;
+    color: white;
+    width: 100%;
+    font-size: 1.5rem;
+    cursor: pointer;
+    &:hover{
+        background-color: rgb(118, 196, 226);
+    }
+}
+
 @media only screen and (max-width: 1020px){
     :local(.bodyContainer){
         grid-template-areas: "left"
