--- a/src/components/Body.scss
+++ b/src/components/Body.scss
@@ -106,6 +106,10 @@
     height: 3rem;
 }
 
+:local(.deleteButton){
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 1020px){
     :local(.bodyContainer){
         grid-template-areas: "left"
