--- a/src/components/navigation/UploadViewer.scss
+++ b/src/components/navigation/UploadViewer.scss
@@ -33,6 +33,13 @@
     }
 }
 
+@media only screen and (max-width: 1100px){
+    :local(.uploadContainer){
+        grid-template-areas: "upload"
+                            "info";
+    }
+}
+
 @media only screen and (max-width: 1020px){
     :local(.bodyContainer){
         grid-template-areas: "left"
