--- a/src/components/navigation/Portal.scss
+++ b/src/components/navigation/Portal.scss
@@ -5,3 +5,20 @@
     color: black;
     padding: 2rem;
 }
+
+@media only screen and (min-width: 1300px){
+    :local(.bodyContainer){
+        max-width: 1280px;
+        margin: auto;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    :local(.reactTable){
+        max-width: 90vw;
+        overflow: scroll;
+    }
+    :local(.bodyContainer){
+        padding: 0rem;
+    }
+}
